--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -24,3 +24,29 @@ img {
   justify-content: center;
   background: #eee;
 }
+
+/* my solution */
+
+.all {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 32px;
+}
+
+.info {
+  display: flex;
+  gap: 52px;
+  align-content: center;
+}
+
+.plant {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.text {
+  width: 200px;
+  text-align: center;
+}
