--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo {
@@ -9,16 +13,23 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin: 8px;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  justify-content: space-between;
+  margin: 8px;
+  padding: 0px;
+  display: flex;
+  justify-content: center;
 }
 
 a {
   font-size: 22px;
   background: white;
+  margin: 8px;
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
